web/theme/default/css/xibo.css
/* ... */
.portlet .tabbable-line > .tab-content {
    padding-bottom: 0;
}

.designer-control-panel-checkbox.override-layout {
    padding-top: 0px !important;
}*/

.locks {
    font-size:75% !important;
}


.panel.with-nav-tabs .panel-heading{
    padding: 5px 5px 0 5px;
}
.panel.with-nav-tabs .nav-tabs{
    border-bottom: none;
}
.panel.with-nav-tabs .nav-justified{
    margin-bottom: -1px;
}

/********************************************************************/
/*** PANEL PRIMARY ***/
.with-nav-tabs.panel-primary .nav-tabs > li > a,
.with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
.with-nav-tabs.panel-primary .nav-tabs > li > a:focus {
    color: #fff;
}
.with-nav-tabs.panel-primary .nav-tabs > .open > a,
.with-nav-tabs.panel-primary .nav-tabs > .open > a:hover,
.with-nav-tabs.panel-primary .nav-tabs > .open > a:focus,
.with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
.with-nav-tabs.panel-primary .nav-tabs > li > a:focus {
    color: #fff;
    background-color: #3071a9;
    border-color: transparent;
}
.with-nav-tabs.panel-primary .nav-tabs > li.active > a,
.with-nav-tabs.panel-primary .nav-tabs > li.active > a:hover,
.with-nav-tabs.panel-primary .nav-tabs > li.active > a:focus {
    color: #428bca;
    background-color: #fff;
    border-color: #428bca;
    border-bottom-color: transparent;
}

.nav-tabs>li {
    margin-bottom: -4px !important;
}

.col-md-2 ul.list-group {
    box-shadow: none !important;
}

.col-md-2 ul.list-group li.list-group-item {
   padding: 3px 15px;
}

.col-md-2 ul.list-group li.list-group-item p {
    margin-bottom: 0px;
}

.designer-control-panel-checkbox {
    padding-top: 0px !important;
}

.panel.bttm-fix {
    margin-bottom: 0px !important;
}

.tab-pane.no-pad {
    padding-top: 0px !important;
}

.alert.no-pad {
    padding: 4px !important;
}

